# neko

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md
src/: pyproject.toml
src/neko/: dataset.py  eval.py  generate.py  preprocess.py  train.py
src/neko/model/: decoder.py  encoder.py
src/scripts/: config.py  eval.py  example_physionet.py  train.py
weights/small/: decoder.pt  encoder.pt
