[tool.poetry]
name = "neko"
version = "0.1.0"
description = "Neko Challenge."
authors = [
    "Jean-François Reboud <jeanfrancois.reboud.gre@gmail.com>",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "1.26.4"
torch = "2.2.1"
pandas = "^1.5"
wfdb = "^4.1.2"
ptwt = "^0.1.8"
typer = "^0.9.2"
tqdm = "^4.66.4"
loguru = "^0.7.2"
matplotlib = {version ="^3.9.0", python=">=3.9,<3.13"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
pytest = "^8.0.0"
black = {extras = ["d"], version = "^24.0.0"}
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
ignore_missing_imports = true
